--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1793,6 +1793,357 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "w-47Vp9zUwsn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 317
+        },
+        "outputId": "2b4f3f0a-f5ed-45b8-e440-51b38d5807d4"
+      },
+      "source": [
+        "df.describe()"
+      ],
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>bathrooms</th>\n",
+              "      <th>bedrooms</th>\n",
+              "      <th>latitude</th>\n",
+              "      <th>longitude</th>\n",
+              "      <th>price</th>\n",
+              "      <th>elevator</th>\n",
+              "      <th>cats_allowed</th>\n",
+              "      <th>hardwood_floors</th>\n",
+              "      <th>dogs_allowed</th>\n",
+              "      <th>doorman</th>\n",
+              "      <th>dishwasher</th>\n",
+              "      <th>no_fee</th>\n",
+              "      <th>laundry_in_building</th>\n",
+              "      <th>fitness_center</th>\n",
+              "      <th>pre-war</th>\n",
+              "      <th>laundry_in_unit</th>\n",
+              "      <th>roof_deck</th>\n",
+              "      <th>outdoor_space</th>\n",
+              "      <th>dining_room</th>\n",
+              "      <th>high_speed_internet</th>\n",
+              "      <th>balcony</th>\n",
+              "      <th>swimming_pool</th>\n",
+              "      <th>new_construction</th>\n",
+              "      <th>terrace</th>\n",
+              "      <th>exclusive</th>\n",
+              "      <th>loft</th>\n",
+              "      <th>garden_patio</th>\n",
+              "      <th>wheelchair_access</th>\n",
+              "      <th>common_outdoor_space</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.00000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "      <td>48818.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>1.201790</td>\n",
+              "      <td>1.537158</td>\n",
+              "      <td>40.750756</td>\n",
+              "      <td>-73.972758</td>\n",
+              "      <td>3579.560982</td>\n",
+              "      <td>0.524827</td>\n",
+              "      <td>0.478266</td>\n",
+              "      <td>0.478266</td>\n",
+              "      <td>0.447622</td>\n",
+              "      <td>0.424843</td>\n",
+              "      <td>0.415072</td>\n",
+              "      <td>0.367078</td>\n",
+              "      <td>0.052767</td>\n",
+              "      <td>0.268446</td>\n",
+              "      <td>0.185649</td>\n",
+              "      <td>0.175898</td>\n",
+              "      <td>0.132758</td>\n",
+              "      <td>0.138392</td>\n",
+              "      <td>0.102831</td>\n",
+              "      <td>0.087201</td>\n",
+              "      <td>0.060469</td>\n",
+              "      <td>0.055205</td>\n",
+              "      <td>0.051907</td>\n",
+              "      <td>0.046192</td>\n",
+              "      <td>0.043304</td>\n",
+              "      <td>0.042710</td>\n",
+              "      <td>0.03933</td>\n",
+              "      <td>0.027224</td>\n",
+              "      <td>0.026240</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>0.470707</td>\n",
+              "      <td>1.106078</td>\n",
+              "      <td>0.038962</td>\n",
+              "      <td>0.028887</td>\n",
+              "      <td>1762.420875</td>\n",
+              "      <td>0.499388</td>\n",
+              "      <td>0.499533</td>\n",
+              "      <td>0.499533</td>\n",
+              "      <td>0.497254</td>\n",
+              "      <td>0.494324</td>\n",
+              "      <td>0.492740</td>\n",
+              "      <td>0.482013</td>\n",
+              "      <td>0.223571</td>\n",
+              "      <td>0.443156</td>\n",
+              "      <td>0.388827</td>\n",
+              "      <td>0.380737</td>\n",
+              "      <td>0.339317</td>\n",
+              "      <td>0.345314</td>\n",
+              "      <td>0.303741</td>\n",
+              "      <td>0.282133</td>\n",
+              "      <td>0.238357</td>\n",
+              "      <td>0.228382</td>\n",
+              "      <td>0.221842</td>\n",
+              "      <td>0.209903</td>\n",
+              "      <td>0.203542</td>\n",
+              "      <td>0.202204</td>\n",
+              "      <td>0.19438</td>\n",
+              "      <td>0.162736</td>\n",
+              "      <td>0.159851</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>40.571200</td>\n",
+              "      <td>-74.087300</td>\n",
+              "      <td>1375.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>40.728300</td>\n",
+              "      <td>-73.991800</td>\n",
+              "      <td>2500.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>40.751700</td>\n",
+              "      <td>-73.978000</td>\n",
+              "      <td>3150.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>40.774000</td>\n",
+              "      <td>-73.955000</td>\n",
+              "      <td>4095.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.00000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>10.000000</td>\n",
+              "      <td>8.000000</td>\n",
+              "      <td>40.989400</td>\n",
+              "      <td>-73.700100</td>\n",
+              "      <td>15500.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.00000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          bathrooms      bedrooms  ...  wheelchair_access  common_outdoor_space\n",
+              "count  48818.000000  48818.000000  ...       48818.000000          48818.000000\n",
+              "mean       1.201790      1.537158  ...           0.027224              0.026240\n",
+              "std        0.470707      1.106078  ...           0.162736              0.159851\n",
+              "min        0.000000      0.000000  ...           0.000000              0.000000\n",
+              "25%        1.000000      1.000000  ...           0.000000              0.000000\n",
+              "50%        1.000000      1.000000  ...           0.000000              0.000000\n",
+              "75%        1.000000      2.000000  ...           0.000000              0.000000\n",
+              "max       10.000000      8.000000  ...           1.000000              1.000000\n",
+              "\n",
+              "[8 rows x 29 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 178
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "zsHv7Hd184ZB",
         "colab_type": "code",
         "colab": {
@@ -1866,6 +2217,82 @@
       "cell_type": "code",
       "metadata": {
         "id": "qg7oYMufDD99",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def predictnyc(features):\n",
+        "  y_pred=model1.predict(pd.DataFrame(features))\n",
+        "  estimate=y_pred[0]\n",
+        "  coefficient=model1.coef_[0]\n",
+        "  result = f'rent is ${estimate:,.0f}'\n",
+        "  return result"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M8YyexOnTkEZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "87b8013f-54b5-4e54-baeb-aef9e26b4368"
+      },
+      "source": [
+        "predictnyc(new_data)\n"
+      ],
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'rent is $5,769'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 177
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a_CJfc1MUMvv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "outputId": "08701770-a56c-4b62-a925-c6073d83f660"
+      },
+      "source": [
+        "from ipywidgets import interactive\n",
+        "#['bedrooms','bathrooms','doorman','laundry_in_unit','dining_room', 'longitude']\n",
+        "w = interactive(predictnyc, features[0]=10, features[1]=8, features[2]=1, features[3]=1, features[4]=1, features[5]=-74)"
+      ],
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-181-d48279275750>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    w = interactive(predictnyc, features[0]=10, features[1]=8, features[2]=1, features[3]=1, features[4]=1, features[5]=-74)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "teDI1kl7VU2t",
         "colab_type": "code",
         "colab": {}
       },
