--- a/module2-regression-2/Loc_Huynh_LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/Loc_Huynh_LS_DS_212_assignment.ipynb
@@ -1528,21 +1528,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "d688bcfe-c0cf-41e3-f7d0-04c8d2ef2d99"
+        "outputId": "3fa36d06-63ff-4f41-e232-3a3897fd5655"
       },
       "source": [
         "# Train Error\n",
         "from sklearn.metrics import mean_absolute_error\n",
         "y_pred = [guess] * len(y_train)\n",
         "mae = mean_absolute_error(y_train, y_pred)\n",
-        "print(f'Train Error: {mae:.2f} percentage points')"
+        "print(f'Train Error: {mae:.2f}')"
       ],
-      "execution_count": 212,
+      "execution_count": 247,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train Error: 1201.88 percentage points\n"
+            "Train Error: 1201.88\n"
           ],
           "name": "stdout"
         }
@@ -1557,20 +1557,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bd34e202-0431-4702-82de-311683305acc"
+        "outputId": "688450dc-d2ea-4ad5-8eb1-24f6c07a4108"
       },
       "source": [
         "# Test Error\n",
         "y_pred = [guess] * len(y_test)\n",
         "mae = mean_absolute_error(y_test, y_pred)\n",
-        "print(f'Test Error: {mae:.2f} percentage points)')"
+        "print(f'Test Error: {mae:.2f}')"
       ],
-      "execution_count": 213,
+      "execution_count": 248,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Test Error: 1197.71 percentage points)\n"
+            "Test Error: 1197.71\n"
           ],
           "name": "stdout"
         }
@@ -1947,21 +1947,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8f63ea8e-3376-4c37-e22d-4ced2f09e502"
+        "outputId": "67d1aa5e-aae8-456e-e884-9e3935aea31e"
       },
       "source": [
         "#4. Fit the model\n",
         "model.fit(X_train, y_train)\n",
         "y_pred = model.predict(X_train)\n",
         "mae = mean_absolute_error(y_train, y_pred)\n",
-        "print(f'Train Error: {mae:.2f} percentage points')"
+        "print(f'Train Error: {mae:.2f}')"
       ],
-      "execution_count": 225,
+      "execution_count": 246,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train Error: 0.00 percentage points\n"
+            "Train Error: 810.90\n"
           ],
           "name": "stdout"
         }
