added stretch for optimal test error peer challenge, ordered coef_ results, eliminated low-impact features

--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -3490,7 +3490,7 @@
         "# instantiate\n",
         "model=LinearRegression()\n",
         "# #train on >=2 features\n",
-        "features=['longitude', 'interest_level', 'east', 'west', 'totalfeat', 'landsc', 'wine', 'view', 'lux', 'bedrooms', 'bathrooms', 'hardwood_floors', 'ave', 'street', 'noadd', 'nodescr']\n",
+        "features=['longitude','bathrooms','noadd','wine','bedrooms','interest_level','nodescr','landsc','lux','east','hardwood_floors','view','ave','street','totalfeat']\n",
         "\n",
         "X_train=train[features]\n",
         "X_test=test[features]"
@@ -3507,13 +3507,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "022a4e46-4b6d-4639-9daf-721af650c238"
+        "outputId": "d75c2f3c-1e1a-4a6b-ce69-31516ba8a39d"
       },
       "source": [
         "#fit model\n",
         "model.fit(X_train, y_train)"
       ],
-      "execution_count": 455,
+      "execution_count": 497,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3525,7 +3525,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 455
+          "execution_count": 497
         }
       ]
     },
@@ -3538,7 +3538,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 87
         },
-        "outputId": "5c3d036d-e63d-4dc9-88af-6155b8a2f68b"
+        "outputId": "7a71b18e-7f8f-4f95-f57f-26080f192110"
       },
       "source": [
         "y_pred=model.predict(X_train)\n",
@@ -3551,15 +3551,15 @@
         "print(f'root mse: {rmse:,}')\n",
         "print(f'r2: {r2}')"
       ],
-      "execution_count": 456,
+      "execution_count": 498,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "train error: $690.93\n",
-            "mean squared error: 1,189,813.6154834472\n",
-            "root mse: 1,090.785778915112\n",
-            "r2: 0.6168106915654696\n"
+            "mean squared error: 1,189,814.756127481\n",
+            "root mse: 1,090.78630176927\n",
+            "r2: 0.6168103242116313\n"
           ],
           "name": "stdout"
         }
@@ -3574,7 +3574,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 87
         },
-        "outputId": "8b09e70d-530b-4676-b289-cb762fb739cc"
+        "outputId": "f9da2451-8d15-40fa-bd5e-49181577da91"
       },
       "source": [
         "y_pred=model.predict(X_test)\n",
@@ -3587,15 +3587,15 @@
         "print(f'root mse: {rmse:,}')\n",
         "print(f'r2: {r2}')"
       ],
-      "execution_count": 457,
+      "execution_count": 499,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "train error: $690.14\n",
-            "mean squared error: 1,148,162.4081048828\n",
-            "root mse: 1,071.523405299615\n",
-            "r2: 0.6305809036827514\n"
+            "train error: $690.15\n",
+            "mean squared error: 1,148,164.2855760513\n",
+            "root mse: 1,071.524281374926\n",
+            "r2: 0.6305802996099326\n"
           ],
           "name": "stdout"
         }
@@ -3610,29 +3610,29 @@
           "base_uri": "https://localhost:8080/",
           "height": 105
         },
-        "outputId": "6b2ed5d3-e0d2-4255-f820-a0ea96f31bfa"
+        "outputId": "f6c7b47c-cd06-4b0d-b1e7-680eb1e20e4c"
       },
       "source": [
         "#\n",
         "model.intercept_, model.coef_"
       ],
-      "execution_count": 423,
+      "execution_count": 500,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(-961653.9127656027,\n",
-              " array([-13013.08301675,   -454.42932575,    257.02561734,    539.95450246,\n",
-              "            74.01602264,    189.8677199 ,    463.71635196,   1815.8585593 ,\n",
-              "           -87.4915289 ,     55.15082414,     62.72690364,    111.46761894,\n",
-              "          -642.21275605,    259.68087057]))"
+              "(-988802.1123084162,\n",
+              " array([-13380.1261921 ,   1812.4995572 ,   -647.47655445,    539.17214134,\n",
+              "           464.07178482,   -454.05126087,    249.97739793,    265.54634289,\n",
+              "           191.70278275,    162.10424639,    -87.86833999,     68.85865523,\n",
+              "            68.01004547,     57.04969159,     54.95306815]))"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 423
+          "execution_count": 500
         }
       ]
     },
